/*
 * Copyright (C) 2017 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.dac.proto.model.source;

import "../../../../../services/namespace/src/main/protobuf/source.proto";

option java_package = "com.dremio.dac.proto.model.source";
option optimize_for = SPEED;


enum AuthenticationType {
  ANONYMOUS = 0;
  USER = 1;
  MASTER = 2;
}

message UnknownConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
}

message NASConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional string path = 1;
}

message HdfsConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional string hostname = 1;
  optional int32 port = 2;
  optional bool enableImpersonation = 3 [default = false];
  repeated Property property = 4;
  optional string root_path = 5 [default = "/"];
}

message MapRFSConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional string cluster_name = 1;
  optional bool enableImpersonation = 2 [default = false];
  optional bool secure = 3;
  repeated Property property = 4;
  optional string root_path = 5 [default = "/"];
}

message S3Config {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional string access_key = 1;
  optional string access_secret = 2;
  optional bool secure = 3;
  repeated string external_bucket = 4;
  repeated Property property = 5;
}

message MongoConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";

  // Fields to construct the mongo client url
  optional string username = 1;
  optional string password = 2;
  repeated Host host = 3;  // default port should be 27017
  optional string replicaSet = 4; // TODO: check if this is necessary
  optional bool use_ssl = 5;
  repeated Property property = 6;
  optional AuthenticationType authenticationType = 7;
  optional string auth_database = 8;

  // Storage plugin configuration
  optional int32 authenticationTimeoutMillis = 9; // (mongo defaults to 30 secs) default 2secs
  repeated string databases = 10; // empty by default. Provides the list of databases if we don't have access to it.
  optional bool secondaryReadsOnly = 11; // limit reads to read-only secondaries (no reads from writable primaries) If you have no secondaries the queries will fail.
  optional int32 subpartitionSize = 12; // if different from 0 it will increase query paralellism. the number of records to be read by query fragments.

}

message Host {
  optional string hostname = 1;
  optional int32 port = 2;
}

message ElasticConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  repeated Host host = 1; // default port should be 9200
  optional string username = 2;
  optional string password = 3;
  optional AuthenticationType authenticationType = 4;
  optional bool scriptsEnabled = 5 [default = true];
  optional bool showHiddenIndices = 6 [default = false];
  optional bool sslEnabled = 7 [default = false];
  optional bool showIdColumn = 8 [default = false];
  optional int32 readTimeoutMillis = 9;
  optional int32 scrollTimeoutMillis = 10;
  optional bool usePainless = 11 [default = true];
  optional bool useWhitelist = 12 [default = false];
  optional int32 scrollSize = 13 [default = 4000];
  optional bool allowGroupByOnNormalizedFields = 14 [default = false];
}

message OracleConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional string hostname = 1;
  optional string port = 2; // Default is 1521
  optional string instance = 3; // Default is ORCL
  optional string username = 4;
  optional string password = 5;
  optional AuthenticationType authenticationType = 6;
  optional uint32 fetchSize = 7;
}

message MySQLConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional string hostname = 1;
  optional string port = 2; // Default is 3306
  optional string username = 4;
  optional string password = 5;
  optional AuthenticationType authenticationType = 6;
  optional uint32 fetchSize = 7; // Default is 10
}

message MSSQLConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional string hostname = 1;
  optional string port = 2; // Default is 1433
  optional string username = 4;
  optional string password = 5;
  optional AuthenticationType authenticationType = 6;
  optional uint32 fetchSize = 7;
  // The database used in the connection handshake. Useful for restricting access, or if a DBMS user does not
  // have permissions to their default database.
  optional string database = 8;
  // Indicates that only tables in the database used in the connection handshake are visible.
  optional bool showOnlyConnectionDatabase = 9 [default = false];
}

message DB2Config {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional string hostname = 1;
  optional string port = 2; // Default is 50000
  optional string database_name = 3;
  optional string username = 4;
  optional string password = 5;
  optional AuthenticationType authenticationType = 6;
  optional uint32 fetchSize = 7;
}

message PostgresConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional string hostname = 1;
  optional string port = 2; // Default is 5432
  optional string database_name = 3;
  optional string username = 4;
  optional string password = 5;
  optional AuthenticationType authenticationType = 6;
  optional uint32 fetchSize = 7;
}

message RedshiftConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional string connection_string = 1; // from aws console
  optional string username = 4;
  optional string password = 5;
  optional AuthenticationType authenticationType = 6;
  optional uint32 fetchSize = 7;
}

message KuduConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  repeated string master_address = 1;
}

message HBaseConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional string zk_quorum = 1;
  optional int32 port = 2;
  optional bool isSizeCalcEnabled = 3; // enabling region size calculation stats
  repeated Property property = 4;
}

/*
 * Azure Blob Store (azb)
 * https://hadoop.apache.org/docs/stable/hadoop-azure/index.html
 */
message AZBConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  
  // fs.azure.account.key.[youraccount].blob.core.windows.net
  optional string account = 1;
  optional string access_key = 2;
  optional bool secure = 3; //wasb vs wasbs
  repeated Property property = 4;
}

/*
 * Azure Data Lake (ADL)
 * https://hadoop.apache.org/docs/current/hadoop-azure-datalake/index.html
 */
enum ADLAuth {

  // fs.adl.oauth2.access.token.provider.type = RefreshToken
  REFRESH_TOKEN = 1;
  
  // fs.adl.oauth2.access.token.provider.type = ClientCredential
  CLIENT_KEY = 2;
}

message ADLConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional ADLAuth mode = 1;
  
  /** Shared **/
  optional string account_name = 2;
  
  // dfs.adls.oauth2.client.id
  optional string client_id = 3;
  
  /** REFRESH_TOKEN **/
  
  // dfs.adls.oauth2.refresh.token
  optional string refresh_token_secret = 4;
  
  /** CLIENT_KEY mode **/ 
  
  // dfs.adl.oauth2.refresh.url
  optional string client_key_refresh_url = 5;
  
  // dfs.adl.oauth2.credential
  optional string client_key_password = 6;
  
  
  /** Shared **/
  repeated Property property = 7;
}


/* 
 * Google Cloud Storage (GCS)
 * https://github.com/GoogleCloudPlatform/bigdata-interop/blob/master/gcs/conf/gcs-core-default.xml
 */
enum GCSAuth {

  // google.cloud.auth.service.account.enable = true
  SERVICE_ACCOUNT = 1;
  
  // google.cloud.auth.service.account.enable = false 
  CLIENT_KEY = 2;
}

message GCSConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  
  optional GCSAuth mode = 1;
  
  /** both modes **/
  // fs.gs.project.id
  optional string project_id = 2;
  
  /** Service Account **/
  
  // google.cloud.auth.service.account.email (optional)
  optional string service_account_email = 3;
  
  // google.cloud.auth.service.account.keyfile (optional)
  optional string service_account_keyfile = 4;
  
  /** Client Key **/
  
  // google.cloud.auth.client.id
  optional string client_key_id = 5;
  
  // google.cloud.auth.client.secret
  optional string client_key_secret = 6;
  
  // google.cloud.auth.client.file
  optional string client_key_keyfile = 7;
  
  repeated Property property = 8;
  
}


/*
 * Configuration for Hive source.
 */
message HiveConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";

  /*
   * Hostname where Hive metastore server is running
   */
  optional string hostname = 1;

  /*
   * Listening port of Hive metastore server
   */
  optional int32 port = 2 [default = 9083];

  /*
   * Is kerberos authentication enabled on metastore services?
   */
  optional bool enableSasl = 3 [default = false];

  /*
   * Kerberos principal name of metastore servers if kerberos authentication is enabled
   */
  optional string kerberosPrincipal = 4;

  /*
   * List of configuration properties.
   */
  repeated Property property = 5;
}

message PDFSConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  repeated PDFSPath path = 1;
}

message PDFSPath {
  optional string path = 1;
  optional string name = 2;
}

message ClassPathConfig {
  option (extends_class) = "com.dremio.dac.model.sources.Source";
  optional string path = 1;
}

message Property {
  optional string name = 1;
  optional string value = 2;
}
